# tensor-related

./: CMakeLists.txt  README.md  autograd.py  ops.cpp  ops.h  passes.cpp  passes.h  test_outer_vs_matmul.py  types.cpp  types.h
c++/: CMakeLists.txt  README.md  frontend.cpp  frontend.h  main.cpp  ops.cpp  ops.h  passes.cpp  passes.h  test.cpp  types.cpp  types.h
c++/bril/: CMakeLists.txt  cfg.cpp  cfg.h  example.bril  example.json  lvn.cpp  lvn.h  tdce.cpp  tdce.h
c++/include/: frontend.h  gpu_exec.h  ops.h  ops_gpu.h  passes.h  types.h
c++/ir/: 1_layer.json
c++/irs/two_dimensional/: 2_layer.json  large_matrix.json
c++/mlir/: 1-layer_new.json  CMakeLists.txt  frontend.cpp  frontend.h  ops.cpp  ops.h  test_frontend.cpp  types.cpp  types.h
c++/src/: frontend.cpp  gpu_exec.cu  main.cpp  ops.cpp  ops_gpu.cu  passes.cpp  types.cpp
include/: frontend.h  gpu_exec.h  hlo.h  metal_exec.h  ops.h  optimizers.h  passes.h  types.h
irs/: 1_layer.json
irs/mnist/: mnist.json
irs/tests/: fusion.json  quantization.json  softmax_cross_entropy.json
irs/two_dimensional/: 1_layer.json  mnist.json  no_quantization.json  test.json
python/: .env  00_original.json  01_after_dce.json  02_final_optimized.json  1-layer.json  1_layer_nn_forward.json  autograd.py  backward.py  base.py  basic_ingestion.py  bytecode_demo.py  data.json  data2.json  fused_output.json  hlo.py  hlo_op.json  input.json  llo.py  main.py  my_model.json  output.txt  pytorch_fx_script.py  triton_kernel.py
python/archive/: pytorch_sandbox.py
python/autograd/: 1-layer.json  forward.json  nn.json
python/irs/: clean_nn.json  hlo_op.json  llo_op.json  pre_op.json
src/: frontend.cpp  gpu_exec.cu  hlo.cpp  main.cpp  metal_exec.cpp  ops.cpp  optimizers.cpp  passes.cpp  types.cpp
tests/: test_types.cpp
